--- a/aula02/.prettierrc
+++ b/aula02/.prettierrc
@@ -1,10 +1,4 @@
 {
-  "tabWidth": 2,
-  "quoteProps": "as-needed",
   "singleQuote": true,
-  "printWidth": 120,
-  "semi": true,
-  "useTabs": false,
-  "trailingComma": "all",
-  "arrowParens": "avoid"
+  "trailingComma": "all"
 }
