--- a/aula02/package.json
+++ b/aula02/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aula02",
+  "name": "aula1-mod4",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,9 +23,10 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/mapped-types": "^1.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.1.1",
+    "@types/validator": "^13.6.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
