--- a/frontend-mod4/package.json
+++ b/frontend-mod4/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
